--- a/DayCare/DayCare/ThemeDictionary.xaml
+++ b/DayCare/DayCare/ThemeDictionary.xaml
@@ -15,6 +15,11 @@
 		<Setter Property="FontSize" Value="29.333"/>
 	</Style>
 
+	<Style x:Key="LabelInfoStyle" TargetType="{x:Type TextBlock}">
+		<Setter Property="FontFamily" Value="Comic Sans MS"/>
+		<Setter Property="FontSize" Value="18"/>
+	</Style>
+
 	<Style x:Key="GroupBoxHeaderStyle" TargetType="{x:Type TextBlock}">
 		<Setter Property="FontFamily" Value="Comic Sans MS"/>
 		<Setter Property="FontSize" Value="22"/>
