--- a/DayCare/DayCare/Views/Dashboard/DashBoardView.xaml
+++ b/DayCare/DayCare/Views/Dashboard/DashBoardView.xaml
@@ -6,7 +6,7 @@
              xmlns:local="clr-namespace:DayCare.Views.Dashboard"
              xmlns:vc="clr-namespace:DayCare.Converters"
              mc:Ignorable="d" 
-             d:DesignHeight="600" d:DesignWidth="1000">
+             d:DesignHeight="600" d:DesignWidth="1600">
 	<UserControl.Resources>
 		<ResourceDictionary>
 			<vc:BooleanVisibilityConverter x:Key="BooleanVisibilityConverter" />
@@ -119,6 +119,18 @@
 					</Grid.RowDefinitions>
 					<Image Source="/DayCare;component/Resources/database.png"/>
 					<Button Grid.Row="1" Content="Database" x:Name="DatabaseAction"
+                            Style="{DynamicResource ButtonStyle}" FontFamily="Comic Sans MS" FontSize="22" />
+				</Grid>
+			</Border>
+
+			<Border Width="150" Height="200" Margin="25" >
+				<Grid>
+					<Grid.RowDefinitions>
+						<RowDefinition Height="1*"/>
+						<RowDefinition Height="Auto"/>
+					</Grid.RowDefinitions>
+					<Image Source="/DayCare;component/Resources/sleep.png"/>
+					<Button Grid.Row="1" Content="Slaap stand" x:Name="SleepAction"
                             Style="{DynamicResource ButtonStyle}" FontFamily="Comic Sans MS" FontSize="22" />
 				</Grid>
 			</Border>
