--- a/DayCare/DayCare/Views/Dashboard/DashBoardView.xaml
+++ b/DayCare/DayCare/Views/Dashboard/DashBoardView.xaml
@@ -99,14 +99,14 @@
 				</Grid>
 			</Border>
 
-			<Border Width="150" Height="200" Margin="25" Visibility="Collapsed">
+			<Border Width="150" Height="200" Margin="25" >
 				<Grid>
 					<Grid.RowDefinitions>
 						<RowDefinition Height="1*"/>
 						<RowDefinition Height="Auto"/>
 					</Grid.RowDefinitions>
 					<Image Source="/DayCare;component/Resources/Factuur.png"/>
-					<Button Grid.Row="1" Content="Kosten" x:Name="FactuurAction"
+					<Button Grid.Row="1" Content="Facturen" x:Name="FactuurAction"
                             Style="{DynamicResource ButtonStyle}" FontFamily="Comic Sans MS" FontSize="22" />
 				</Grid>
 			</Border>
