--- a/DayCare/DayCare/Views/Database/DatabaseView.xaml
+++ b/DayCare/DayCare/Views/Database/DatabaseView.xaml
@@ -30,6 +30,18 @@
                             Style="{DynamicResource ButtonStyle}" FontFamily="Comic Sans MS" FontSize="22" />
 				</Grid>
 			</Border>
+
+			<Border Width="150" Height="200" Margin="25">
+				<Grid>
+					<Grid.RowDefinitions>
+						<RowDefinition Height="1*"/>
+						<RowDefinition Height="Auto"/>
+					</Grid.RowDefinitions>
+					<Image Source="/DayCare;component/Resources/reset_database.png"/>
+					<Button Grid.Row="1" Content="Onderhoud" x:Name="MaintenanceAction"
+                            Style="{DynamicResource ButtonStyle}" FontFamily="Comic Sans MS" FontSize="22" />
+				</Grid>
+			</Border>
 		</WrapPanel>
 	</Grid>
 </UserControl>
