--- a/DayCare/DayCare/ThemeDictionary.xaml
+++ b/DayCare/DayCare/ThemeDictionary.xaml
@@ -114,4 +114,16 @@
 		</Setter>
 	</Style>
 
+	<Style x:Key="SliderThumb" TargetType="Thumb">
+		<Setter Property="SnapsToDevicePixels" Value="true" />
+		<Setter Property="OverridesDefaultStyle" Value="true" />
+		<Setter Property="Template">
+			<Setter.Value>
+				<ControlTemplate TargetType="Thumb">
+					<Ellipse Height="10" Width="10" Fill="Green"></Ellipse>
+				</ControlTemplate>
+			</Setter.Value>
+		</Setter>
+	</Style>
+
 </ResourceDictionary>
