--- a/DayCare/DayCare/Views/Expenses/ExpenseDetailView.xaml
+++ b/DayCare/DayCare/Views/Expenses/ExpenseDetailView.xaml
@@ -2,9 +2,10 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:expenses="clr-namespace:DayCare.ViewModels.Expenses"
              mc:Ignorable="d" 
-             d:DesignHeight="500" d:DesignWidth="600">
+             d:DesignHeight="500" d:DesignWidth="600" d:DataContext="{expenses:ExpenseDetailViewModel}">
 	<Grid>
 		<Grid.ColumnDefinitions>
 			<ColumnDefinition Width="206"/>
@@ -28,7 +29,8 @@
 				<RowDefinition Height="Auto"/>
 				<RowDefinition Height="Auto"/>
 				<RowDefinition Height="Auto"/>
-				<RowDefinition Height="1*"/>
+				<RowDefinition Height="Auto"/>
+				<RowDefinition Height="*"/>
 			</Grid.RowDefinitions>
 			<Grid.ColumnDefinitions>
 				<ColumnDefinition Width="Auto"/>
@@ -41,17 +43,19 @@
 			</Border>
 
 			<TextBlock Grid.Row="1" Text="Extra maaltijd" Style="{DynamicResource LabelStyle}" />
-			<CheckBox Grid.Row="1" Grid.Column="2" VerticalAlignment="Center" HorizontalAlignment="Center" />
-			
-			<TextBlock Grid.Row="2" Text="Extra Uren" Style="{DynamicResource LabelStyle}" />
-			<StackPanel Orientation="Horizontal" Grid.Row="2" Grid.Column="2" VerticalAlignment="Center">
+			<CheckBox IsChecked="{Binding ExtraMeal}" Grid.Row="1" Grid.Column="2" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="46,6,46,5" />
+
+			<TextBlock Grid.Row="2" Text="Extra uren" Style="{DynamicResource LabelStyle}" />
+			<CheckBox IsChecked="{Binding ExtraHours}" Grid.Row="2" Grid.Column="2" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="46,6,46,5" />
+
+			<!--<StackPanel Orientation="Horizontal" Grid.Row="2" Grid.Column="2" VerticalAlignment="Center">
 				<Button Name="DecrementHoursAction" Content="-" Margin="5" Style="{DynamicResource ButtonStyle}" MinWidth="30" FontSize="22" FontWeight="ExtraBold" />
 				<TextBlock Grid.Row="2" Text="{Binding Hours}" Style="{DynamicResource LabelStyle}" MinWidth="50" TextAlignment="Center"/>
 				<Button Name="IncrementHoursAction" Content="+" Margin="5" Style="{DynamicResource ButtonStyle}" MinWidth="30" FontSize="22" FontWeight="ExtraBold" />
-			</StackPanel>
+			</StackPanel>-->
 
-			<TextBlock Grid.Row="3" Text="Te laat" Style="{DynamicResource LabelStyle}" />
-			<CheckBox Grid.Row="3" Grid.Column="2" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+			<TextBlock Grid.Row="3" Text="Te laat afgehaald" Style="{DynamicResource LabelStyle}" />
+			<CheckBox IsChecked="{Binding ToLate}"  Grid.Row="3" Grid.Column="2" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="46,6,46,5"/>
 
 			<TextBlock Grid.Row="4" Text="Pampers" Style="{DynamicResource LabelStyle}" />
 			<StackPanel Orientation="Horizontal" Grid.Row="4" Grid.Column="2" VerticalAlignment="Center">
@@ -59,16 +63,43 @@
 				<TextBlock Grid.Row="2" Text="{Binding Diapers}" Style="{DynamicResource LabelStyle}" MinWidth="50" TextAlignment="Center"/>
 				<Button Name="IncrementDiapersAction" Content="+" Margin="5" Style="{DynamicResource ButtonStyle}" MinWidth="30" FontSize="22" FontWeight="ExtraBold" />
 			</StackPanel>
-			
+
 			<TextBlock Grid.Row="5" Text="Medicatie" Style="{DynamicResource LabelStyle}" />
 			<StackPanel Orientation="Horizontal" Grid.Row="5" Grid.Column="2" VerticalAlignment="Center">
 				<Button Name="DecrementMedicationAction" Content="-" Margin="5" Style="{DynamicResource ButtonStyle}" MinWidth="30" FontSize="22" FontWeight="ExtraBold" />
 				<TextBlock Grid.Row="2" Text="{Binding Medication}" Style="{DynamicResource LabelStyle}" MinWidth="50" TextAlignment="Center"/>
 				<Button Name="IncrementMedicationAction" Content="+" Margin="5" Style="{DynamicResource ButtonStyle}" MinWidth="30" FontSize="22" FontWeight="ExtraBold" />
 			</StackPanel>
-			
+
 			<TextBlock Grid.Row="6" Text="Ziek" Style="{DynamicResource LabelStyle}" />
-			<CheckBox Grid.Row="6" Grid.Column="2" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+			<CheckBox IsChecked="{Binding Sick}" Grid.Row="6" Grid.Column="2" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+
+			<Border Grid.Row="7">
+				<TextBlock  Text="Te laat verwittigd" Style="{DynamicResource LabelStyle}" />
+				<Border.Style>
+					<Style TargetType="Border">
+						<Setter Property="Visibility" Value="Collapsed"/>
+						<Style.Triggers>
+							<DataTrigger Binding="{Binding Sick}" Value="True">
+								<Setter Property="Visibility" Value="Visible"/>
+							</DataTrigger>
+						</Style.Triggers>
+					</Style>
+				</Border.Style>
+			</Border>
+			<Border Grid.Row="7" Grid.Column="2">
+				<CheckBox IsChecked="{Binding SicknessNotNotified}"  VerticalAlignment="Center" HorizontalAlignment="Center" />
+				<Border.Style>
+					<Style TargetType="Border">
+						<Setter Property="Visibility" Value="Collapsed"/>
+						<Style.Triggers>
+							<DataTrigger Binding="{Binding Sick}" Value="True">
+								<Setter Property="Visibility" Value="Visible"/>
+							</DataTrigger>
+						</Style.Triggers>
+					</Style>
+				</Border.Style>
+			</Border>
 
 
 		</Grid>
